force-app/main/default/objects/ApplicationLog__c/ApplicationLog__c.object-meta.xml
<CustomObject>
    <description>This object is used to persist log messages for future reference.</description>
    <label>Application Log</label>
    <nameField>
        <displayFormat>LOG-{00000000}</displayFormat>
        <label>LOG #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>