force-app/main/default/objects/ApplicationLog__c/fields/Reference_Info__c.field-meta.xml
<CustomField>
    <fullName>Reference_Info__c</fullName>
    <description>The related record info (e.g. Apex Batch Job Id, Contact etc)</description>
    <inlineHelpText>The related record info (e.g. Apex Batch Job Id, Contact etc)</inlineHelpText>
    <label>Reference Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>