force-app/main/default/objects/ApplicationLog__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>The originating class (e.g. ScheduledMonthlyNotificationToProvider)</description>
    <externalId>true</externalId>
    <inlineHelpText>The originating class (e.g. ScheduledMonthlyNotificationToProvider)</inlineHelpText>
    <label>Source</label>
    <length>150</length>
    <type>Text</type>
</CustomField>