force-app/main/default/objects/ApplicationLog__c/fields/Source_Function__c.field-meta.xml
<CustomField>
    <fullName>Source_Function__c</fullName>
    <description>The originating function in the class (e.g. UpdateDivision() )</description>
    <externalId>true</externalId>
    <inlineHelpText>The originating function in the class (e.g. UpdateDivision() )</inlineHelpText>
    <label>Source Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>