force-app/main/default/objects/ApplicationLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Age__c</columns>
    <columns>Debug_Level__c</columns>
    <columns>Integration_Payload__c</columns>
    <columns>Log_Code__c</columns>
    <columns>Message__c</columns>
    <columns>Reference_Id__c</columns>
    <columns>Reference_Info__c</columns>
    <columns>Source__c</columns>
    <columns>Source_Function__c</columns>
    <columns>Stack_Trace__c</columns>
    <columns>Timer__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>