force-app/main/default/objects/ApplicationLog__c/listViews/Application_Logs_This_Week.listView-meta.xml
<ListView>
    <fullName>Application_Logs_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Reference_Info__c</columns>
    <columns>Debug_Level__c</columns>
    <columns>Message__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Application Logs This Week</label>
</ListView>